# cpp-rust-driver

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile.in  MAINTENANCE.md  Makefile  README.md  SCYLLA-VERSION-GEN  driver_config.hpp.in
.github/: pull_request_template.md
.github/workflows/: build-lint-and-test.yml  build.yml  cargo_check.yml  cassandra.yml  ci.yml  clippy.yml  docs-pages.yaml  format.yml  package@deb.yml  package@rpm.yml  pkg.yml
cmake/: CMakeCargo.cmake  ClangFormat.cmake  Dependencies.cmake  ExternalProject-OpenSSL.cmake  ExternalProject-libssh2.cmake  ExternalProject-libuv.cmake  ExternalProject-zlib.cmake
docs/: Makefile  pyproject.toml
docs/source/: conf.py  contents.rst  index.md  index.rst  sample-page.rst
docs/source/api/: index.rst
docs/source/topics/: README.md  architecture-overview.md  building.md  getting-started.md  index.md  installation.md  testing.md
docs/source/topics/basics/: README.md  binding-parameters.md  client-side-timestamps.md  consistency.md  data-types.md  date_and_time.md  futures.md  handling-results.md  index.md  keyspaces.md  prepared-statements.md  schema-metadata.md  user-defined-types.md  user_defined_types.md  uuids.md
docs/source/topics/building/: README.md
docs/source/topics/configuration/: README.md  connection.md  execution-profiles.md  index.md  load-balancing.md  load_balancing.md  nonsupported.md  performance-tips.md  performance_tips.md  retry-policies.md  speculative-execution.md
docs/source/topics/dse_features/: README.md
docs/source/topics/installation/: README.md
docs/source/topics/observability/: index.md  metrics.md  tracing.md
docs/source/topics/scylla_specific/: README.md
docs/source/topics/scylladb_specific/: README.md
docs/source/topics/security/: README.md  authentication.md  index.md  nonsupported.md  ssl.md  tls.md
docs/source/topics/testing/: README.md  index.md
docs/source/topics/tracing/: README.md
docs/source/topics/using/: batches.md  binding-parameters.md  client-side-timestamps.md  futures.md  index.md  keyspaces.md  prepared-statements.md
examples/async/: CMakeLists.txt
examples/auth/: CMakeLists.txt
examples/basic/: CMakeLists.txt
examples/batch/: CMakeLists.txt
examples/bind_by_name/: CMakeLists.txt
examples/callbacks/: CMakeLists.txt
examples/cloud/: CMakeLists.txt  cloud.c
examples/collections/: CMakeLists.txt
examples/concurrent_executions/: CMakeLists.txt
examples/date_time/: CMakeLists.txt
examples/drop_examples_keyspace/: .gitignore  CMakeLists.txt  drop_examples_keyspace.c
examples/dse/date_range/: CMakeLists.txt
examples/dse/geotypes/: CMakeLists.txt
examples/dse/gssapi/: CMakeLists.txt
examples/dse/plaintext/: CMakeLists.txt
examples/dse/proxy_execution/: CMakeLists.txt
examples/duration/: CMakeLists.txt
examples/execution_profiles/: CMakeLists.txt
examples/host_listener/: CMakeLists.txt
examples/logging/: CMakeLists.txt
examples/maps/: CMakeLists.txt
examples/named_parameters/: CMakeLists.txt
examples/paging/: CMakeLists.txt
examples/perf/: CMakeLists.txt  perf.c
examples/prepared/: CMakeLists.txt
examples/schema_meta/: CMakeLists.txt  schema_meta.c
examples/simple/: CMakeLists.txt  simple.c
examples/ssl/: CMakeLists.txt  ssl.c
examples/tracing/: CMakeLists.txt  tracing.c
examples/tuple/: CMakeLists.txt  tuple.c
examples/udt/: CMakeLists.txt  udt.c
examples/uuids/: CMakeLists.txt
include/: cassandra.h
packaging/: README.md  build_deb.sh  build_rpm.sh  scylla-cpp-driver.pc.in  scylla-cpp-driver.spec  scylla-cpp-driver_static.pc.in
packaging/debian/: changelog  control  copyright  rules  scylla-cpp-driver-dev.install  scylla-cpp-driver.links  scylla-cpp-driver.pc  scylla-cpp-driver_static.pc
scylla-rust-wrapper/: CMakeLists.txt  Cargo.toml  build-cmake-compat.sh  build.rs  clippy.toml  scylla-cpp-driver.pc.in  versioning.sh
scylla-rust-wrapper/.cargo/: config.toml
scylla-rust-wrapper/src/: api.rs  argconv.rs  batch.rs  binding.rs  cass_error.rs  cass_types.rs  cloud.rs  cluster.rs  collection.rs  config_value.rs  date_time.rs  exec_profile.rs  execution_error.rs  external.rs  future.rs  inet.rs  integration_testing.rs  iterator.rs  lib.rs  load_balancing.rs  logging.rs  metadata.rs  misc.rs  prepared.rs  query_error.rs  query_result.rs  retry_policy.rs  runtime.rs  ser_de_tests.rs  session.rs  ssl.rs  statement.rs  testing.rs  timestamp_generator.rs  tuple.rs  types.rs  user_type.rs  uuid.rs  value.rs
scylla-rust-wrapper/tests/integration/: consistency.rs  main.rs  utils.rs
src/: CMakeLists.txt  address.cpp  address.hpp  constants.hpp  driver_config.hpp  driver_info.cpp  logger.cpp  logger.hpp  macros.hpp  main.c  testing.cpp  testing.hpp  testing_rust_impls.h  testing_unimplemented.cpp  testing_utils.cpp  testing_utils.h  timestamp_generator.cpp  timestamp_generator.hpp
tests/: CMakeLists.txt
tests/examples_cluster/: docker-compose.yml
tests/src/integration/: integration.cpp  integration.hpp  logger.cpp  logger.hpp  main.cpp  options.cpp  options.hpp
tests/src/integration/ccm/: bridge.cpp  bridge.hpp  cass_version.hpp
tests/src/integration/objects/: cluster.hpp  collection.hpp  execution_profile.hpp  result.hpp  retry_policy.hpp  session.hpp  statement.hpp
tests/src/integration/tests/: test_async.cpp  test_basics.cpp  test_batch.cpp  test_by_name.cpp  test_cassandra_types.cpp  test_compression.cpp  test_consistency.cpp  test_control_connection.cpp  test_custom_payload.cpp  test_dc_aware_policy.cpp  test_error.cpp  test_exec_profile.cpp  test_heartbeat.cpp  test_host_filter.cpp  test_latency_aware_policy.cpp  test_logging.cpp  test_metrics.cpp  test_named_parameters.cpp  test_null_string_params.cpp  test_prepare_on.cpp  test_prepared.cpp  test_prepared_metadata.cpp  test_schema_metadata.cpp  test_server_side_failure.cpp  test_session.cpp  test_set_keyspace.cpp  test_speculative_execution.cpp  test_ssl.cpp  test_startup_options.cpp  test_statement.cpp  test_timestamp.cpp  test_tracing.cpp
tests/src/integration/values/: varchar.hpp
(+18 files in other folders)
