[package]
name = "scylla-cpp-driver-rust"
version = "0.0.1"
edition = "2018"
description = "Wrapper for Scylla's Rust driver, exports functions to be used by C"
repository = "https://github.com/scylladb/scylla-rust-driver"
readme = "./README.md"
keywords = ["database", "scylla", "cql", "cassandra"]
categories = ["database"]
license = "MIT OR Apache-2.0"


[dependencies]
scylla = { git = "https://github.com/scylladb/scylla-rust-driver.git", rev = "90044469948bc31fcc7c794d88eb245e2607a68a"}
tokio = { version = "1.1.0", features = ["full"] }
lazy_static = "1.4.0"
uuid = "1.1.2"
machine-uid = "0.2.0"
rand = "0.8.4"
num-traits = "0.2"
num-derive = "0.3"
libc = "0.2.108"

[build-dependencies]
bindgen = "0.59.1"

[lib]
name = "scylla_cpp_driver"
crate-type = ["cdylib", "staticlib"]

[profile.release]
lto = true
