[package]
name = "scylla-cpp-driver-rust"
version = "0.0.1"
edition = "2018"
description = "Wrapper for Scylla's Rust driver, exports functions to be used by C"
repository = "https://github.com/scylladb/scylla-rust-driver"
readme = "./README.md"
keywords = ["database", "scylla", "cql", "cassandra"]
categories = ["database"]
license = "MIT OR Apache-2.0"


[dependencies]
scylla = { git = "https://github.com/scylladb/scylla-rust-driver.git", rev = "9dc6f4871f2477c8ebb5bd911a0ce8ddc05ba8db", features = ["ssl"]}
tokio = { version = "1.1.0", features = ["full"] }
lazy_static = "1.4.0"
uuid = "1.1.2"
machine-uid = "0.2.0"
rand = "0.8.4"
num-traits = "0.2"
num-derive = "0.3"
libc = "0.2.108"
openssl-sys = "0.9.75"
openssl = "0.10.32"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
tracing = "0.1.25"

[build-dependencies]
bindgen = "0.65"
chrono = "0.4.20"

[lib]
name = "scylla_cpp_driver"
crate-type = ["cdylib", "staticlib"]

[profile.release]
lto = true
