[package]
name = "scylla-cpp-driver-rust"
version = "0.4.0"
edition = "2024"
description = "Wrapper for Scylla's Rust driver, exports functions to be used by C"
repository = "https://github.com/scylladb/scylla-rust-driver"
readme = "./README.md"
keywords = ["database", "scylla", "cql", "cassandra"]
categories = ["database"]
license = "MIT OR Apache-2.0"

[dependencies]
scylla = { git = "https://github.com/scylladb/scylla-rust-driver.git", rev = "v1.1.0", features = [
    "openssl-010",
] }
tokio = { version = "1.27.0", features = ["full"] }
uuid = "1.1.2"
machine-uid = "0.2.0"
rand = "0.8.4"
num-traits = "0.2"
num-derive = "0.3"
libc = "0.2.108"
openssl-sys = "0.9.75"
openssl = "0.10.32"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
tracing = "0.1.37"
futures = "0.3"
thiserror = "1.0"
yoke = { version = "0.8.0", features = ["derive"] }

[build-dependencies]
bindgen = "0.65"
chrono = "0.4.20"

[dev-dependencies]
scylla-proxy = { git = "https://github.com/scylladb/scylla-rust-driver.git", rev = "v1.1.0" }
bytes = "1.10.0"

assert_matches = "1.5.0"
ntest = "0.9.3"
rusty-fork = "0.3.0"
[lib]
name = "scylla_cpp_driver"
crate-type = ["cdylib", "staticlib", "lib"]

[profile.dev]
panic = "abort"

[profile.release]
lto = true
panic = "abort"

[profile.relwithdebinfo]
inherits = "release"
opt-level = 3
codegen-units = 1
debug = 2
strip = "none"

[lints.rust]
unsafe-op-in-unsafe-fn = "warn"
